--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
 
 
     <application
+        android:name=".ServerApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -45,16 +46,29 @@
                 android:resource="@xml/file_provider_paths" />
         </provider>
 
-        <service android:name=".activities.UssdService"
-            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
-            android:label="@string/accessibility_service_label"
-            android:exported="true">
+        <!--        <service android:name=".activities.UssdService"-->
+        <!--            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"-->
+        <!--            android:label="@string/accessibility_service_label"-->
+        <!--            android:exported="true">-->
+        <!--            <intent-filter>-->
+        <!--                <action android:name="android.accessibilityservice.AccessibilityService" />-->
+        <!--            </intent-filter>-->
+        <!--            <meta-data-->
+        <!--                android:name="android.accessibilityservice"-->
+        <!--                android:resource="@xml/accessibility_service_config" />-->
+        <!--        </service>-->
+
+        <service
+            android:name=".activities.PhoneUSSDService"
+            android:exported="true"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
             <intent-filter>
                 <action android:name="android.accessibilityservice.AccessibilityService" />
             </intent-filter>
+
             <meta-data
                 android:name="android.accessibilityservice"
-                android:resource="@xml/accessibility_service_config" />
+                android:resource="@xml/config_service" />
         </service>
     </application>
 
