--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,8 @@ dependencies {
     implementation 'io.ktor:ktor-server-content-negotiation:2.2.4'
     implementation 'io.ktor:ktor-server-cors:2.2.4'
 
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
 
 
 }
