--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
 
     <application
@@ -47,31 +48,6 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_provider_paths" />
         </provider>
-
-        <!--        <service android:name=".activities.UssdService"-->
-        <!--            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"-->
-        <!--            android:label="@string/accessibility_service_label"-->
-        <!--            android:exported="true">-->
-        <!--            <intent-filter>-->
-        <!--                <action android:name="android.accessibilityservice.AccessibilityService" />-->
-        <!--            </intent-filter>-->
-        <!--            <meta-data-->
-        <!--                android:name="android.accessibilityservice"-->
-        <!--                android:resource="@xml/accessibility_service_config" />-->
-        <!--        </service>-->
-
-        <!--        <service-->
-        <!--            android:name=".activities.PhoneUSSDService"-->
-        <!--            android:exported="true"-->
-        <!--            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">-->
-        <!--            <intent-filter>-->
-        <!--                <action android:name="android.accessibilityservice.AccessibilityService" />-->
-        <!--            </intent-filter>-->
-
-        <!--            <meta-data-->
-        <!--                android:name="android.accessibilityservice"-->
-        <!--                android:resource="@xml/config_service" />-->
-        <!--        </service>-->
 
         <service
             android:name="com.nphausg.app.ussdlibrary.USSDServiceKT"
